# effectivepy

./: .flake8  .gitignore  .python-version  ARCHITECTURE.md  COOKBOOK.md  GUIDELINES.md  Makefile  README.md  noxfile.py  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
src/effectivepy/: str_helpers.py
tests/: test_i1_ch3.py  test_i6.py
tests/chpt1_pythonic_thinking/: test_i10_prevent_repetition_with_assignment_expressions.py  test_i6_prefer_unpacking_over_indexing.py  test_i7_prefer_enumerate_over_range.py  test_i8_use_zip_to_process_iterator_in_parallel.py
tests/chpt2_lists_and_dictionaries/: i11_know_how_to_slice_sequences.py  i12_avoid_sliding_and_slicing_in_single_expression.py  i13_prefer_catch_all_unpacking_over_slicing.py  i15_be_cautious_when_relying_on_dict_insertion_ordering.py  test_i11_know_how_to_slice_sequences.py  test_i13_prefer_catch_all_unpacking_over_slicing.py  test_i14_sort_by_complex_criteria_using_the_key_parameter.py  test_i16_prefer_get_over_in_and_keyerror_to_handle_missing_dictionary_keys.py  test_i17_prefer_defaultdict_over_setdefault_to_handle_missing_items.py  test_i18_know_how_to_construct_key_dependent_default_vals_with_missing.py
tests/chpt3_functions/: test_i19_never_unpack_more_than_three_variables_when_functions_return_multiple_values.py  test_i20_prefer_raising_exceptions_to_returning_none.py  test_i21_know_how_closures_interact_with_variable_scope.py  test_i22_reduce_visual_noise_with_variable_positional_arguments.py  test_i23_provide_optional_behavior_with_kwargs.py  (+4 more)
(+16 files in other folders)
