
[tool.poetry]
name = "effectivepy"
version = "0.1.0"
description = "Fork-friendly make/Poetry/nox starter project"
authors = ["Lyle Hayhurst"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/lhayhurst/effectivepy/"
documentation = "https://hackersandslackers.com/python-poetry/"
keywords = [
    "Poetry",
    "Virtual Environments",
    "Nox",
    "Python",
    "black",
    "flake8",
    "mypy",
    "pytest",
    "safety"
]

[tool.poetry.dependencies]
python = "^3.8"
flake8-import-order = "^0.18.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
mypy = "^0.812"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
coverage = {extras = ["toml"], version = "^5.5"}
nox-poetry = "^0.8.4"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.3.2"
flake8-bandit = "^2.1.2"
safety = "^1.10.3"
flake8-annotations = "^2.6.1"

[tool.black]
line-length = 103
exclude = '''
(
  \.git
  | \.idea
  | \.mypy_cache
  | \.pytest_cache
  | envs
)
'''

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["effectivepy"]

[tool.coverage.report]
show_missing = true
fail_under = 100
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

